--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 CASSANDRA_HOST=cassandra
 CASSANDRA_PORT=9042
 CASSANDRA_KEYSPACE=warehouse
+
+
+AUTH_API_URL=http://authapi:8000
